--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,4 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
-  "rewrites": [
-    {
-      "source": "/",
-      "destination": "https://myrtle-survey-fe.vercel.app/"
-    },
-    {
-      "source": "/admin/login",
-      "destination": "https://myrtle-survey-fe.vercel.app/admin/login"
-    },
-    {
-      "source": "/admin/dashboard",
-      "destination": "https://myrtle-survey-fe.vercel.app/admin/dashboard"
-    }
-  ]
+  "$schema": "https://openapi.vercel.sh/vercel.json"
 }
 
